--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ TOTP/CSharp/TOTPSharpCLI/bin/
 TOTP/CSharp/TOTPSharpCLI/obj/
 TOTP/CSharp/TOTPSharp_Tests/bin/
 TOTP/CSharp/TOTPSharp_Tests/obj/
+TOTP/JavaScript/node_modules/*
